...

    var body: some View {
        NavigationStack {
            OnboardingView()
                .toolbar {
                    ToolbarItem(placement: .confirmationAction) {
                        Button("Continue") {
                            isPresented = false
                        }
                    }
                }
        }
    }
...
